Pie menu : pie menu calling another pie menu : need to double click (on second menu) #41639

Closed
opened 2014-08-29 21:42:11 +02:00 by Julien Duroure · 6 comments
Member

System Information
Ubuntu 14.04 64bits, intel video card

Blender Version
Broken: 2.71.6 fb3f327

Short description of error
With personnal pie menu, when an item of pie menu is calling another pie menu. On second pie menu, we need to double click to validate. Depending on operator called, popup with parameters of operator is available or not.

Exact steps for others to reproduce the error

  • Open provided blend file
  • exec python file for register pie menus
  • Select bone
  • click F --> 1rst pie menu is now open
  • click "More" ( UP)
  • click "Calculate Bone path" (UP) --> You need to double click to validate. Popup is displayed, but disappear before we can access it
  • Select cube
  • click F --> 1rst pie menu is now open
  • click "More" ( UP)
  • click "Calculate Object path" (UP) --> You need to double click to validate. Popup is displayed and you can change values

Don't hesitate to contact me if you need more informations

pie_bug.blend
ui_quickanim.py

**System Information** Ubuntu 14.04 64bits, intel video card **Blender Version** Broken: 2.71.6 fb3f327 **Short description of error** With personnal pie menu, when an item of pie menu is calling another pie menu. On second pie menu, we need to double click to validate. Depending on operator called, popup with parameters of operator is available or not. **Exact steps for others to reproduce the error** * Open provided blend file * exec python file for register pie menus * Select bone * click F --> 1rst pie menu is now open * click "More" ( UP) * click "Calculate Bone path" (UP) --> You need to double click to validate. Popup is displayed, but disappear before we can access it * Select cube * click F --> 1rst pie menu is now open * click "More" ( UP) * click "Calculate Object path" (UP) --> You need to double click to validate. Popup is displayed and you can change values Don't hesitate to contact me if you need more informations [pie_bug.blend](https://archive.blender.org/developer/F107344/pie_bug.blend) [ui_quickanim.py](https://archive.blender.org/developer/F107345/ui_quickanim.py)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by Julien Duroure 2014-08-29 21:42:11 +02:00
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 0609aee4db

This issue was referenced by 0609aee4db0da33dcdb404d8285b093b21325deb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0609aee4db.

Closed by commit 0609aee4db.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41639
No description provided.